# texhigh-rs

./: .gitattributes  .gitignore  Cargo.toml  README-zh_CN.md  README.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml
benches/: bench.rs  high.rs  regtex.rs  tex.rs  texcsname.pest  texhigh.tex  tl.rs
src/: config.rs  fonts.rs  high.rs  kpathsea.rs  language.rs  layout.rs  lib.rs  main.rs  prelude-config.toml  prelude-ctabset.thcs  range.rs  regtex.rs  tokenlist.rs  types.rs  unicode.rs
src/tex/: args_parser.rs  circumflex.rs  mod.rs  primitives_data.rs  texcsname.pest  types.rs
tests/: pairs.rs  pattern.rs
