[package]
name = "texhigh"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "*"
anyhow = "1"
bitflags = "2"
byte-unit = "*"
clap = "~4"
codepage = "*"
compact_str = { version = "*", features = ["serde"] }
config = "~0"
cosmic-text = "*"
dirs = "*"
encoding_rs = "*"
env_logger = "0"
hashers = "*"
indexmap = { version = "2", features = ["serde", "rayon"] }
itoa = "*"
lazy_static = "1"
log = "0"
mimalloc = "*"
pest = "~2"
pest_derive = "2"
rapidfuzz = "*"
rayon = "*"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
skrifa = "*"
smallvec = { version = "1", features = ["serde", "write", "union"] }
sys-locale = "*"
textwrap = { version = "*", features = ["terminal_size"] }
tiny-skia = "*"
toml = "^0.8"
unicode-properties = "*"
walkdir = "2"
winapi = { version = "*", features = ["winnls"] }
yeslogic-unicode-blocks = "*"
