[package]
name = "texhigh"
version = "0.2.1"
edition = "2021"

[dependencies]
anstyle = "*"
anyhow = "1"
base64 = "*"
bitflags = "2"
byte-unit = "*"
clap = "~4"
compact_str = { version = "*", features = ["serde"] }
config = "~0"
cosmic-text = "*"
dirs = "*"
encoding_rs = "*"
enum_dispatch = "*"
env_logger = "0"
hashers = "*"
indexmap = { version = "2", features = ["serde", "rayon"] }
itoa = "*"
lazy_static = "1"
log = "0"
memchr = "*"
mimalloc = "*"
pest = "~2"
pest_derive = "2"
rapidfuzz = "*"
rayon = "*"
regex = "1"
regex-syntax = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
skrifa = "*"
smallvec = { version = "1", features = ["serde", "write", "union", "const_generics"] }
sys-locale = "*"
textwrap = { version = "*", features = ["terminal_size"] }
tiny-skia = "*"
toml = "^0.8"
unicode-linebreak = "*"
unicode-normalization = "*"
unicode-properties = { version = "*", features = ["general-category", "emoji"] }
unicode-script = "*"
unicode-segmentation = "*"
unicode_names2 = "*"
walkdir = "2"
yeslogic-unicode-blocks = "*"

[target.'cfg(windows)'.dependencies]
codepage = "*"
winapi = { version = "*", features = ["winnls"] }

[profile.release]
panic = "abort"
