[package]
name = "texhigh"
version = "0.3.3-a"
edition = "2021"

[dependencies]
anstyle = "*"
anyhow = "1"
base64 = "*"
bitflags = "2"
byte-unit = "*"
clap = "~4"
compact_str = { version = "*", features = ["serde"] }
config = { version = "^0.15", default-features = false, features = ["toml", "preserve_order"] }
cosmic-text = { version = "*", default-features = false, features = ["std", "swash"] }
dirs = "*"
encoding_rs = "*"
enum_dispatch = "*"
env_logger = "0"
hashers = "*"
indexmap = { version = "2", features = ["serde", "rayon"] }
itoa = "*"
lazy_static = "1"
log = "0"
memchr = "*"
mimalloc = "*"
rapidfuzz = "*"
rayon = "*"
regex = "1"
regex-syntax = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
skrifa = "*"
smallvec = { version = "1", features = ["serde", "write", "union", "const_generics"] }
sys-locale = "*"
textwrap = { version = "*", features = ["terminal_size"] }
tiny-skia = "*"
toml = "^0.9"
unicode-linebreak = "*"
unicode-normalization = "*"
unicode-properties = { version = "*", features = ["general-category", "emoji"] }
unicode-script = "*"
unicode-segmentation = "*"
unicode_names2 = "*"
walkdir = "2"
which = "*"
yeslogic-unicode-blocks = "*"

[target.'cfg(windows)'.dependencies]
codepage = "*"
winapi = { version = "*", features = ["winnls"] }

[dev-dependencies]
pest = "~2"
pest_derive = "2"
criterion = "*"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "high"
harness = false

[[bench]]
name = "regtex"
harness = false

[[bench]]
name = "tex"
harness = false

[[bench]]
name = "tl"
harness = false

[profile.release]
strip = true
